# govee-h5086-homeassistant

./: .gitignore  LICENSE  README.md  hacs.json  pyproject.toml  requirements-dev.txt
.github/workflows/: ci.yml
custom_components/govee_h5086_ble/: __init__.py  config_flow.py  const.py  coordinator.py  manifest.json  parser.py  sensor.py  strings.json
scripts/: capture.py  decode.py  dump_gatt.py  govee_power.py  identify.py  listen.py  monitor.py  probe_power.py  scan.py  try_decrypt.py
tests/: conftest.py  test_config_flow.py  test_coordinator.py  test_parser.py  test_sensor.py
